--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.24",
+    "date-fns": "^4.1.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
