--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,37 +1,83 @@
+absl-py==2.3.1
+annotated-types==0.7.0
+anyio==3.7.1
+astunparse==1.6.3
+attrs==25.4.0
 bleach==6.2.0
 blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
-Flask==3.1.2
-flask-cors==6.0.1
+distro==1.9.0
+dnspython==2.8.0
+Flask==2.3.3
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.7.1
+flatbuffers==25.9.23
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h11==0.16.0
+h5py==3.15.1
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.11.1
 joblib==1.5.2
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 kaggle==1.7.4.5
 kagglehub==0.3.13
+keras==3.12.0
+libclang==18.1.1
+Markdown==3.10
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.4
+namex==0.1.0
 numpy==2.3.2
+openai==2.5.0
+opt_einsum==3.4.0
+optree==0.18.0
 packaging==25.0
+pillow==12.0.0
 pluggy==1.6.0
 protobuf==6.32.0
+pydantic==2.12.3
+pydantic_core==2.41.4
 Pygments==2.19.2
+PyJWT==2.10.1
+pymongo==4.15.4
 pytest==8.4.2
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
+python-dotenv==1.0.0
 python-slugify==8.0.4
 PyYAML==6.0.2
+referencing==0.37.0
 requests==2.32.5
+rich==14.2.0
+rpds-py==0.27.1
 scikit-learn==1.7.1
 scipy==1.16.1
 setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
 text-unidecode==1.3
 threadpoolctl==3.6.0
 tqdm==4.67.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 urllib3==2.5.0
 webencodings==0.5.1
 Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.1
