--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy Frontend to EC2
+name: Deploy Full Stack to EC2
 
 on:
   push:
     branches:
-      - main  # deploy on pushes to main
+      - main
   workflow_dispatch:
 
 jobs:
@@ -15,21 +15,30 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Set up Node.js for building frontend locally
+      # Set up Node.js for building frontend
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # Build frontend locally in GitHub Actions
+      # Create frontend .env file for production build
+      - name: Create frontend .env file
+        run: |
+          cd frontend
+          cat > .env << EOF
+          VITE_GOOGLE_CLIENT_ID=${{ secrets.VITE_GOOGLE_CLIENT_ID }}
+          VITE_API_URL=${{ secrets.VITE_API_URL }}
+          EOF
+
+      # Build frontend
       - name: Build frontend
         run: |
           cd frontend
           npm ci
           npm run build
 
-      # Copy the built files to EC2
-      - name: Upload dist to EC2
+      # Deploy frontend dist to EC2
+      - name: Upload frontend to EC2
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -38,8 +47,54 @@ jobs:
           port: 22
           source: "frontend/dist/*"
           target: "/var/www/pomtime-prototype/"
+          strip_components: 2
 
-      # Reload Nginx to serve the new build
+      # Deploy backend code to EC2
+      - name: Upload backend to EC2
+        uses: appleboy/scp-action@v0.1.4
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          port: 22
+          source: "server/*"
+          target: "/home/${{ secrets.EC2_USER }}/pomtime-app/"
+          strip_components: 0
+
+      # Setup and restart backend
+      - name: Setup and restart backend
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            # Navigate to backend directory
+            cd /home/${{ secrets.EC2_USER }}/pomtime-app/server
+            
+            # Create virtual environment if it doesn't exist
+            if [ ! -d "venv" ]; then
+              python3 -m venv venv
+            fi
+            
+            # Activate virtual environment and install dependencies
+            source venv/bin/activate
+            pip install -r requirements.txt
+            
+            # Create .env file for backend
+            cd src
+            cat > .env << 'EOF'
+            MONGODB_URI=${{ secrets.MONGODB_URI }}
+            MONGODB_DB_NAME=${{ secrets.MONGODB_DB_NAME }}
+            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            SECRET_KEY=${{ secrets.FLASK_SECRET_KEY }}
+            FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+            EOF
+            
+            # Restart Flask service
+            sudo systemctl restart pomtime-backend
+
+      # Reload Nginx
       - name: Reload Nginx
         uses: appleboy/ssh-action@v0.1.8
         with:
