--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,9 +45,9 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
-          source: "frontend/dist/*"
+          source: "frontend/dist/"
           target: "/var/www/pomtime-prototype/"
-          strip_components: 2
+          strip_components: 1
 
       # Deploy backend code to EC2
       - name: Upload backend to EC2
