--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -16,6 +16,9 @@ Flask-Cors==4.0.0
 Flask-JWT-Extended==4.7.1
 flatbuffers==25.9.23
 gast==0.6.0
+google-auth==2.35.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
 google-pasta==0.2.0
 grpcio==1.76.0
 h11==0.16.0
