--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "framer-motion": "^12.23.24",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
