--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -100,6 +100,7 @@ jobs:
             GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
             SECRET_KEY=${{ secrets.FLASK_SECRET_KEY }}
             FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+            ENV=production
             EOF
             
             # Restart Flask service
