--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.555.0",
     "react": "^19.1.1",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
